# VisitorDesignPattern

./: CMakeLists.txt  README.md  main.cpp  run.sh
data-structure/: DataStructure.h  Graph.cpp  Graph.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h
data-structure-visitors/: ExportVisitor.h  JsonExporterVisitor.cpp  JsonExporterVisitor.h
